--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,94 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+# Owner of the GitHub repository
+owner: SRESchool
 
+# Name of the GitHub repository
+repo: All-Motoshare-Websites-Uptime-Monitor
+
+user-agent: pritesh-1904
+skipReadme: true
+skipDescription: true
+skipTopics: true
+
+# List of websites to monitor for uptime and SSL
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
+  - name: MotoShare Asia
+    url: https://motoshare.asia
+    ssl: true
+  - name: MotoShare Canada
+    url: https://motoshare.ca
+    ssl: true
+  - name: MotoShare Colombia
+    url: https://motoshare.co
+    ssl: true
+  - name: MotoShare China
+    url: https://motoshare.com.cn
+    ssl: true
+  - name: MotoShare Indonesia
+    url: https://motoshare.id
+    ssl: true
+  - name: MotoShare India
+    url: https://motoshare.in
+    ssl: true
+  - name: MotoShare Mexico
+    url: https://motoshare.mx
+    ssl: true
+  - name: MotoShare Japan
+    url: https://motoshare.jp
+    ssl: true
+  - name: MotoShare USA
+    url: https://motoshare.us
+    ssl: true
+  - name: MotoShare Africa
+    url: https://motoshareafrica.com
+    ssl: true    port: 80
     check: "tcp-ping"
     ipv6: true
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  cname: null
+  baseUrl: /All-Motoshare-Websites-Uptime-Monitor
+  logoUrl: https://raw.githubusercontent.com/upptime/upptime/master/assets/logo.png
+  name: MotoShare Websites Uptime Monitor
+  introTitle: MotoShare Websites Status
+  introMessage: This page shows the uptime and SSL status of MotoShare websites.
+  favicon: https://raw.githubusercontent.com/upptime/upptime/master/assets/favicon.ico
+  theme: light
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+jobs:
+  update:
+    runs-on: ubuntu-latest
+
+# Workflow schedule (every 5 minutes)
+workflowSchedule:
+  graphs: "*/5 * * * *"
+  responseTime: "*/5 * * * *"
+  staticSite: "*/5 * * * *"
+  summary: "*/5 * * * *"
+  updateTemplate: "*/5 * * * *"
+  updates: "*/5 * * * *"
+  uptime: "*/5 * * * *"
+  ssl: "*/5 * * * *"
+
+# Committer configuration
+committer:
+  name: Pritesh
+  email: contact@motoshare.in
+
+# Email notification configuration
+notifications:
+  - type: email
+    smtpTo: contact@motoshare.in
+    smtpFrom: contact@motoshare.in
+    smtpHost: smtp.gmail.com
+    smtpPort: 587
+    smtpUsername: contact@motoshare.in
+    smtpPassword: kmxg nshc vsrf kxqj
+
+# Assignees for issues
+assignees:
+  - pritesh-1904
