--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -115,6 +115,9 @@ notifications:
     smtpPort: 587
     smtpUsername: contact@motoshare.in
     smtpPassword: kmxg nshc vsrf kxqj
+    events:
+      - up
+      - down
 
 # Assignees for issues
 assignees:
