--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -71,10 +71,7 @@ sites:
     followRedirects: true
     expectedStatus: 200
     ssl: true    
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
-
+    
 status-website:
   cname: null
   baseUrl: /All-Motoshare-Websites-Uptime-Monitor
@@ -109,6 +106,8 @@ committer:
 # Email notification configuration
 notifications:
   - type: email
+    smtpTo: contact@motoshare.in
+    smtpFrom: contact@motoshare.in
     smtpHost: smtp.gmail.com
     smtpPort: 587
     smtpUsername: contact@motoshare.in
