--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -107,11 +107,11 @@ committer:
 notifications:
   - type: email
     smtpTo: contact@motoshare.in
-    smtpFrom: contact@motoshare.in
+    smtpFrom: pritesh.cotocus@gmail.com
     smtpHost: smtp.gmail.com
     smtpPort: 587
     smtpUsername: contact@motoshare.in
-    smtpPassword: kmxg nshc vsrf kxqj
+    smtpPassword: "kmxg nshc vsrf kxqj"
     events:
       - up
       - down
